<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.engageft.fis.pscu.feature.CreateEditTransferViewModel"/>
        <variable
            name="palette"
            type="com.engageft.fis.pscu.feature.branding.Palette"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ach_bank_transfer_create_title"
                android:textSize="32sp"
                android:textColor="#444444"
                android:lineSpacingExtra="6sp"
                android:gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/structure5"
                android:lineSpacingExtra="11sp"
                android:padding="16dp"
                android:gravity="center_horizontal"
                android:text="@string/ach_bank_transfer_create_subTitle"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cellBackground"
                android:orientation="vertical">

                <include layout="@layout/view_horizontal_divider" />

                <com.engageft.apptoolbox.view.BottomSheetListInputWithLabel
                    style="@style/BottomSheetListInputWithLabelStyle"
                    android:id="@+id/accountFromBottomSheet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    app:labelText="@string/ach_bank_transfer_create_from_label"
                    app:bottomSheetDialogTitle="@string/ach_bank_transfer_create_from_account"
                    app:bottomSheetDialogStyle="@style/ListOptionBottomSheetDialogFragmentStyle">
                </com.engageft.apptoolbox.view.BottomSheetListInputWithLabel>

                <com.engageft.apptoolbox.view.BottomSheetListInputWithLabel
                    style="@style/BottomSheetListInputWithLabelStyle"
                    android:id="@+id/accountToBottomSheet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    app:labelText="@string/ach_bank_transfer_create_to_label"
                    app:bottomSheetDialogTitle="@string/ach_bank_transfer_create_to_account"
                    app:bottomSheetDialogStyle="@style/ListOptionBottomSheetDialogFragmentStyle"/>

                <com.engageft.apptoolbox.view.CurrencyInputWithLabel
                    style="@style/CurrencyInputWithLabelStyle"
                    android:id="@+id/amountInputWithLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    app:labelText="@string/ach_bank_transfer_create_amount_label"/>

                <com.engageft.apptoolbox.view.BottomSheetListInputWithLabel
                    style="@style/BottomSheetListInputWithLabelStyle"
                    android:id="@+id/frequencyBottomSheet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    app:labelText="@string/ach_bank_transfer_create_frequency_label"
                    app:bottomSheetDialogTitle="@string/ach_bank_transfer_create_frequency_title"
                    app:bottomSheetDialogStyle="@style/ListOptionBottomSheetDialogFragmentStyle"/>

                <com.engageft.apptoolbox.view.DatePickerInputWithLabel
                    style="@style/BottomSheetListInputWithLabelStyle"
                    android:id="@+id/date1BottomSheet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    android:visibility="gone"
                    app:labelText="@string/ach_bank_transfer_create_monthly_label"
                    app:bottomSheetDialogTitle="@string/ach_bank_transfer_create_monthly_label"
                    app:bottomSheetDialogStyle="@style/ListOptionBottomSheetDialogFragmentStyle"/>

                <com.engageft.apptoolbox.view.DatePickerInputWithLabel
                    style="@style/BottomSheetListInputWithLabelStyle"
                    android:id="@+id/date2BottomSheet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    android:visibility="gone"
                    app:labelText="@string/ach_bank_transfer_create_bimonthly_second_label"
                    app:bottomSheetDialogTitle="@string/ach_bank_transfer_create_bimonthly_second_label"
                    app:bottomSheetDialogStyle="@style/ListOptionBottomSheetDialogFragmentStyle"/>

                <com.engageft.apptoolbox.view.BottomSheetListInputWithLabel
                    style="@style/BottomSheetListInputWithLabelStyle"
                    android:id="@+id/daysOfWeekBottomSheet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    android:visibility="gone"
                    app:labelText="@string/ach_bank_transfer_create_weekly_label"
                    app:bottomSheetDialogTitle="@string/ach_bank_transfer_create_weekly_title"
                    app:bottomSheetDialogStyle="@style/ListOptionBottomSheetDialogFragmentStyle"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.engageft.apptoolbox.view.PillButton
                style="@style/ButtonPillPrimaryFilledDefault"
                PillButton.setThemeFilled="@{true}"
                android:id="@+id/nextButton"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pillButtonTopSpaceInFormsAndLists"
                android:text="@string/ach_bank_transfer_create_next_button"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</layout>