<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.engageft.fis.pscu.feature.achtransfer.AchBankAccountDetailViewModel"/>
        <variable
            name="palette"
            type="com.engageft.fis.pscu.feature.branding.Palette"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cellBackground">

                <com.engageft.apptoolbox.view.TextWithLabel
                    style="@style/TextInputWithLabelStyle"
                    android:id="@+id/accountNameTextWithLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:labelText="@string/ach_bank_account_name_label"
                    app:inputText="@={viewModel.accountName}"/>

                <com.engageft.apptoolbox.view.TextWithLabel
                    style="@style/TextInputWithLabelStyle"
                    android:id="@+id/routingNumberTextWithLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:labelText="@string/ach_bank_account_routing_number_label"
                    app:inputText="@={viewModel.routingNumber}"/>

                <com.engageft.apptoolbox.view.TextWithLabel
                    style="@style/TextInputWithLabelStyle"
                    android:id="@+id/accountNumberTextWithLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:labelText="@string/ach_bank_account_account_number_label"
                    app:inputText="@={viewModel.accountNumber}"/>

                <com.engageft.apptoolbox.view.TextWithLabel
                    style="@style/TextInputWithLabelStyle"
                    android:id="@+id/accountTypeTextWithLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    app:labelText="@string/ach_bank_account_type_label"/>
            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/deleteButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@color/cellBackground">

                <TextView
                    parisStyle="@{palette.body}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cellBackground"
                    android:gravity="center_horizontal"
                    android:paddingTop="@dimen/listItemPaddingTop"
                    android:paddingBottom="@dimen/listItemPaddingBottom"
                    android:text="@string/ach_bank_account_delete"
                    android:textColor="@{palette.errorColor}"
                    tools:textColor="@color/error"/>

                <include layout="@layout/divider" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.engageft.apptoolbox.view.PillButton
                style="@style/ButtonPillPrimaryFilledDefault"
                android:id="@+id/verifyAccountButton"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/ach_bank_transfer_verify_account"
                android:visibility="@{viewModel.showButton ? View.VISIBLE : View.GONE}" />

        </LinearLayout>

    </ScrollView>

</layout>


