<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.engageft.fis.pscu.feature.achtransfer.AchBankAccountVerifyViewModel"/>
        <variable
            name="palette"
            type="com.engageft.fis.pscu.feature.branding.Palette"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AchBankAccountVerifyTitleStyle"
                android:id="@+id/instructionsTextView"
                android:text="@string/ach_bank_account_verify_instructions"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/cellBackground">

                <com.engageft.apptoolbox.view.CurrencyInputWithLabel
                    style="@style/CurrencyInputWithLabelStyle"
                    InputWithLabel.setThemeWithPalette="@{true}"
                    android:id="@+id/amountInputWithLabel1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:labelText="@string/ach_bank_account_verify_amount_1"
                    app:inputText="@={viewModel.amount1}"/>

                <com.engageft.apptoolbox.view.CurrencyInputWithLabel
                    style="@style/CurrencyInputWithLabelStyle"
                    InputWithLabel.setThemeWithPalette="@{true}"
                    android:id="@+id/amountInputWithLabel2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    app:labelText="@string/ach_bank_account_verify_amount_2"
                    app:inputText="@={viewModel.amount2}"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.engageft.apptoolbox.view.PillButton
                style="@style/ButtonPillPrimaryFilledDefault"
                PillButton.setThemeFilled="@{true}"
                android:id="@+id/submitButton"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pillButtonTopSpaceInFormsAndLists"
                android:text="@string/ach_bank_account_verify_button"
                android:onClick="@{() -> viewModel.onVerifyAccount()}"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


</layout>
